# sensor-network

./: .gitignore  CMakeLists.txt  README.md
platform/src/: main.cpp
proto/: CpuTempService.proto  CpuUsageService.proto
scripts/: linux_temp.sh  mac_run_network.sh  mac_setup_dependencies.sh
sensor/src/: SystemCommands.hpp.in  main.cpp
